# qa-guru-python-poetry

./: README.md  pyproject.toml
